<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bd</string>
    <string name="action_settings">Version</string>
    <string name="details">Details</string>
    <string name="filterToolTip">Type your text to filter</string>
    <string name="libelleFilter">filter</string>
    <string name="blankCounter">(--)</string>
    <string name="dialogName">lorem ipsum</string>
    <string name="dialogNumero">lorem ipsum</string>
    <string name="dialogManquant">lorem ipsum</string>
    <string name="listitem_nom">nom série</string>
    <string name="listitem_editor">editor</string>
    <string name="listitem_isbn"> </string>
    <string name="listitem.numero">1 2 3</string>
    <string name="listitem.fini">-</string>
    <string name="listitem.manquant">liste manquante</string>
    <string name="listitem.fini.description">collection completed ?</string>
    <string name="listitem.couverture.description">couverture</string>
    <string name="popup.image.description">image field</string>
    <string name="popup.editor">editor</string>
    <string name="popup.fini.description">collection completed ?</string>
    <string name="listitem_counter">XX/YY</string>
    <string name="manquand_serie_id">2</string>
    <string name="manquant_bd_id">1</string>
    <string name="manquant_nom">nom</string>
    <string name="manquant_editeur">editeur</string>
    <string name="manquant_serie">serie</string>
    <string name="manquant_contentDescription">couverture manquante</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_manage">Manage ...</string>
    <string name="menu_settings">Settings...</string>
    <string name="menu_quit">Quit</string>
</resources>
