<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.DisplayActivity">
    <item
        android:id="@+id/menu_refresh"
        android:showAsAction="always"
        android:icon="@drawable/icon_dark_refresh"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_manage"
        android:showAsAction="always"
        android:icon="@drawable/icon_dark_edit"
        android:title="@string/menu_manage" />
    <item
        android:id="@+id/menu_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings" />


    <item
        android:id="@+id/action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/menu_quit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_quit" />

</menu>
