<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_display">

    <TextView
        android:id="@+id/libelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libelleFilter"
        style="@style/FilterText" />


    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/libelle"
        android:text="@string/blankCounter"
        style="@style/FilterText" />

    <displaylist.collectionbdclient.components.CustomEditText
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/libelle"
        android:layout_toEndOf="@+id/libelle"
        android:layout_marginStart="10dp"
        android:background="@color/white"
        android:hint="@string/filterToolTip" />

</merge>