<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/LayoutBackground">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/listitem.couverture.description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/listitem_nom"
        style="@style/WhiteText" />

    <TextView
        android:id="@+id/serie_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nom"
        android:text="@string/listitem_counter"
        style="@style/WhiteText" />

    <TextView
        android:id="@+id/editeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listitem_editor"
        style="@style/GreenText"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/nom"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/possede"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listitem.numero"
        style="@style/PossedeText"
        android:layout_below="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <ImageView
        android:id="@+id/fini"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/editeur"
        android:contentDescription="@string/listitem.fini.description"
        android:src="@drawable/cross"
        android:text="@string/listitem.fini"
        style="@style/GreenText"
        android:typeface="serif" />

    <TextView
        android:id="@+id/manquant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listitem.manquant"
        style="@style/ManquanteText"
        android:layout_below="@+id/possede"
        android:layout_alignStart="@+id/possede" />

    <TextView
        android:id="@+id/bd_id"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_below="@+id/manquant" />


</RelativeLayout>
